# chonk

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLAUDE_MEMORY.md  README.md  benchmark-design.md  dependency-health-report.md  enhancements_consolidated.md  enhancements_v2.md  ideas.md  install_mcp.ps1  install_mcp.py  install_mcp.sh  launch_aipa_test_mcp_server.sh  mcp_chonk_server.py  migration-plan.md  paper.md  papers.md  public-benchmark-design.md  pyproject.toml  security-audit-report.md  type-audit.md
.codex/: config.toml
.codex/agents/: agent-writer.toml  bug-fixer.toml  debugger.toml  refactorer.toml  requirements-tracker.toml  test-strategist.toml
.github/workflows/: cve-audit.yml  typecheck.yml
aipa_test_mcp_server/: claude_desktop_config.json  index_config.yaml  server.py
aipa_test_mcp_server/future_state_architecture/: code-conversion.md  conversion-plan.md  extraction-scope.md  ml-services.md  overview.md  unit-testing.md
chonk/: __init__.py  _config.py  _ingest_worker.py  _struct_inference.py  _types.py  _versioning.py  chunking.py  context.py  indexer.py  ingest.py  lifecycle.py  loader.py  models.py  schema.py
chonk/cluster/: __init__.py  _clusterer.py  _cooccurrence.py  _map.py
chonk/community/: __init__.py  _build.py  _builder.py  _index.py  _summarizer.py
chonk/extractors/: __init__.py  _attack.py  _clinical_trial.py  _csv.py  _cve.py  _cwe.py  _docx.py  _edgar.py  _email.py  _fda_label.py  _fhir.py  _html.py  _java.py  _json.py  _lookup_table.py  _markdown.go  _markdown.py  _mime.py  _nist.py  _nosql.py  _odf.py  _parquet.py  _pdf.py  _pptx.py  _protocol.py  _python.py  _renderer.py  _text.py  _typescript.py  _xlsx.py  _xml.py  _yaml.py  html_qwen.go  markdown_extractor.go
chonk/generation/: __init__.py  _answer.py  _context.py  _prompt_builder.py
chonk/graph/: __init__.py  _builder.py  _context_graph.py  _entity_pipeline.py  _extractor.py  _index.py  _llm.py  _svo.py
chonk/ner/: __init__.py  _build.py  _index.py  _merge.py  _normalizer.py  _pipeline.py  _schema.py  _schema_vocab.py  _spacy.py  _spacy_labels.py  _vocabulary.py
chonk/search/: __init__.py  _enhanced.py  _enhanced_graph.py  _enhanced_scoring.py  _enhanced_support.py
chonk/storage/: __init__.py  _pg.py  _pinecone.py  _pool.py  _protocol.py  _qdrant.py  _relational.py  _schema.py  _store.py  _vector.py  _weaviate.py
chonk/transports/: __init__.py  _cassandra.py  _cosmos.py  _crawler_protocol.py  _db_schema.py  _directory_crawler.py  _dynamodb.py  _elasticsearch.py  _firestore.py  _ftp.py  _github.py  _gmail.py  _http.py  _imap.py  _import_crawler.py  _local.py  _mongodb.py  _protocol.py  _s3.py  _schema_infer.py  _sftp.py  _sharepoint.py  _solr.py  _sql_query.py  _sqlalchemy.py  _web_crawler.py
chunkymonkey/: context.py  loader.py  models.py
chunkymonkey/search/: _enhanced.py
chunkymonkey/storage/: _vector.py
demo/: benchmark.py  clinicaltrials_demo.py  compare_runs.py  contextual_vs_naive.py  edgar_demo.py  edgar_scale_demo.py  generate_office_docs.py  graphrag_bench.py  grid_search.py  openai_rpm_limits.json  python_docs_demo.py  reeval_all.sh
docs/: configuration.md  dependency-mapping-python-to-go.md  feature-namespace-lifecycle.md  graphrag_systems_comparison.md  hare_bench.aux  hare_bench.md  hare_bench.tex  paper.aux  paper.md  paper.out  paper.tex  scale-plan.md
docs/arch/: requirements.md
docs/figures/: make_charts.py
examples/: basic_chunking.py  code_indexing.py  contextual_chunking.py  custom_extractor.py  custom_transport.py
generate-training/: README.md  manifest_delta_schema.md  modernization_manifest_A.md  modernization_manifest_schema.md  setup_training.sh  skill_clusters.md  skill_generator.md  skill_interviewer.md  skill_judge.md
go_migration/: .golangci.yml  MIGRATION_STATUS.md  Makefile  README.md  go.mod
go_migration/config/: example.yaml  example_memory.yaml
migration_planning/: python-to-go-migration-plan.md  risk-assessment-python-to-go.md
scripts/: canary_stamp.py  gmail_auth.py  uvlock_to_poetrylock.py
tests/integration/: test_crawler.py  test_edgar_pipeline.py  test_gmail.py  test_imap.py  test_loader.py  test_pg_backend.py  test_s3.py  test_sharepoint.py  test_storage.py  test_weaviate_backend.py
tests/unit/: test_annotate_extractors.py  test_attach_global.py  test_attack_renderer.py  test_bench_config.py  test_chunking.py  test_clinicaltrials.py  test_cluster.py  test_code_extractors.py  test_community_summarizer.py  test_context.py  test_context_graph.py  test_cve_renderer.py  test_edgar_extractor.py  test_enhanced_search.py  test_entity_normalizer.py  test_entity_pipeline.py  test_extractor.py  test_extractor_protocol_compliance.py  test_extractors.py  test_generation.py  test_graph.py  test_import_crawler.py  test_indexer.py  test_mcp_chonk_server.py  test_mime.py  test_ner.py  test_ner_pipeline.py  test_new_renderers.py  test_pg_vector_backend.py  test_schema_loader.py  test_schema_matcher.py  test_sql_query_transport.py  test_structured_file.py  test_sync_document.py  test_transports.py  test_versioning.py
training/: .gitignore  accepted_v2.jsonl  accepted_v4.jsonl  finetune_together.py  gen_registry_v3.txt  gen_registry_v4.txt  local_fine_tuning.py  methodology.md  modernization_manifest_A.md  modernization_manifest_C.md  proxy.py  skill_audit.md  to_ollama.py  train.jsonl  val.jsonl
training/tmp/: batch_01.jsonl  batch_01_v5.jsonl  batch_02.jsonl  batch_02_v5.jsonl  batch_03.jsonl  batch_03_v5.jsonl  batch_04.jsonl  batch_04_v5.jsonl  batch_05.jsonl  batch_05_v5.jsonl  batch_06.jsonl  batch_06_v5.jsonl  batch_07.jsonl  batch_07_v5.jsonl  batch_08.jsonl  batch_08_v5.jsonl  batch_09.jsonl  batch_10.jsonl  batch_11.jsonl  batch_12.jsonl  batch_13.jsonl  batch_14.jsonl  make_csv_v3.py  make_csv_v4.py  make_csv_v5.py  make_queue_v3.py  make_queue_v4.py  make_queue_v5.py  scores_v4.json  scores_v4_part0.json  scores_v4_part1.json  scores_v4_part2.json  scores_v4_part3.json  (+7 more)
work/: gpu_monitor.py  run_fang2026.sh  run_full_all.sh  run_parallel.py  score_typed.py
(+237 files in other folders)
