[project]
name = "chonk"
version = "0.1.0"
description = "A dairy-free RAG pipeline for delicious semantic similarity, clustering and NER."
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
http    = ["requests>=2.32", "certifi>=2024.0"]
s3      = ["boto3>=1.42"]
sftp    = ["paramiko>=3.4"]
pdf     = ["pypdf>=6.6"]
docx    = ["python-docx>=1.2"]
xlsx    = ["openpyxl>=3.1"]
pptx    = ["python-pptx>=1.0"]
yaml    = ["pyyaml>=6.0"]
odf     = ["odfpy>=1.4"]
storage  = ["duckdb>=1.4", "numpy>=2.0", "sqlalchemy>=2.0", "duckdb-engine>=0.13"]
pgvector = ["psycopg2-binary>=2.9", "pgvector>=0.3"]
cluster = ["scikit-learn>=1.5", "numpy>=2.0"]
leiden  = ["igraph>=0.11", "leidenalg>=0.10"]
parquet = ["pyarrow>=14.0"]
code       = []  # Python/TS/JS/Java via stdlib ast + regex; no additional packages required
ner        = ["inflect>=7.0"]
spacy      = ["spacy>=3.7"]
csv        = ["pandas>=2.0"]
gmail      = ["google-api-python-client>=2.0", "google-auth-oauthlib>=1.0", "google-auth-httplib2>=0.4"]
sharepoint = ["office365-rest-python-client>=2.5"]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-timeout>=2.3",
    "bandit>=1.8",
    "ruff>=0.15",
    "black>=26.0",
    "json5>=0.9",
    "json-repair>=0.25",
    "rouge-score>=0.1",
    "python-dotenv>=1.0",
    "pytest-asyncio>=0.23",
    "pytest-docker>=3.1",
    "respx>=0.20",
    "langsmith>=0.1",
]
full    = [
    "chonk[http,s3,sftp]",
    "chonk[pdf,docx,xlsx,pptx,yaml,odf]",
    "chonk[storage]",
    "chonk[cluster]",
    "chonk[parquet]",
    "chonk[code]",
    "chonk[csv]",
    "chonk[gmail]",
    "chonk[sharepoint]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chonk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-x --tb=short"
timeout = 60
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring real I/O",
]

[tool.coverage.run]
source = ["chonk"]
omit = ["tests/*", "demo/*", "work/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.poetry]
name = "chonk"
version = "0.1.0"
description = ""
authors = ["Kenneth R. Stott <kennethstott@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
