[project]
name = "chonk"
version = "0.1.0"
description = "A dairy-free RAG pipeline for delicious semantic similarity, clustering and NER."
requires-python = ">=3.11,<3.15"
dependencies = [
    "sentence-transformers>=5.5.1,<6",
    "torch>=2.12,<3",
]

[project.optional-dependencies]
http    = ["requests>=2.34.2,<3", "certifi>=2026.5.20"]
s3      = ["boto3>=1.43.23,<1.50"]
sftp    = ["paramiko>=3.5.1,<4"]
pdf     = ["pypdf>=6.12.2,<7"]
docx    = ["python-docx>=1.2,<2"]
xlsx    = ["openpyxl>=3.1.5,<4"]
pptx    = ["python-pptx>=1.0.2,<2"]
yaml    = ["pyyaml>=6.0.3,<7"]
odf     = ["odfpy>=1.4.1,<2"]
storage  = ["duckdb>=1.5.3,<2", "numpy>=2.4.6,<3", "sqlalchemy>=2.0.50,<3", "duckdb-engine>=0.17,<1"]
pgvector = ["psycopg2-binary>=2.9.12,<3", "pgvector>=0.4.2,<1"]
cluster = ["scikit-learn>=1.9,<2", "numpy>=2.4.6,<3"]
leiden  = ["igraph>=0.11.9,<1", "leidenalg>=0.10.2,<1"]
parquet = ["pyarrow>=24.0,<30"]
code       = []  # Python/TS/JS/Java via stdlib ast + regex; no additional packages required
ner        = ["inflect>=7.5,<8"]
spacy      = ["spacy>=3.8.14,<3.9", "thinc>=8.3.13,<9"]
csv        = ["pandas>=2.3.3,<3"]
gmail      = ["google-api-python-client>=2.197,<3", "google-auth-oauthlib>=1.4,<2", "google-auth-httplib2>=0.4,<1"]
sharepoint = ["office365-rest-python-client>=2.6.2,<3"]
full    = [
    # http, s3, sftp
    "requests>=2.34.2,<3", "certifi>=2026.5.20", "boto3>=1.43.23,<1.50", "paramiko>=3.5.1,<4",
    # pdf, docx, xlsx, pptx, yaml, odf
    "pypdf>=6.12.2,<7", "python-docx>=1.2,<2", "openpyxl>=3.1.5,<4", "python-pptx>=1.0.2,<2", "pyyaml>=6.0.3,<7", "odfpy>=1.4.1,<2",
    # storage
    "duckdb>=1.5.3,<2", "numpy>=2.4.6,<3", "sqlalchemy>=2.0.50,<3", "duckdb-engine>=0.17,<1",
    # cluster
    "scikit-learn>=1.9,<2",
    # parquet
    "pyarrow>=24.0,<30",
    # csv
    "pandas>=2.3.3,<3",
    # gmail
    "google-api-python-client>=2.197,<3", "google-auth-oauthlib>=1.4,<2", "google-auth-httplib2>=0.4,<1",
    # sharepoint
    "office365-rest-python-client>=2.6.2,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chonk"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1",
    "pytest-timeout>=2.4",
    "bandit>=1.9.4",
    "ruff>=0.15.16",
    "black>=26.5.1",
    "json5>=0.14",
    "json-repair>=0.60.1",
    "rouge-score>=0.1.2",
    "python-dotenv>=1.2.2",
    "pytest-asyncio>=1.4",
    "pytest-docker>=3.2.5",
    "respx>=0.23.1",
    "langsmith>=0.8.9",
    "pyright>=1.1.390",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-x --tb=short"
timeout = 60
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring real I/O",
]

[tool.coverage.run]
source = ["chonk"]
omit = ["tests/*", "demo/*", "work/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# ANN: enforce annotations + ban `Any` in annotations (ANN401).
# RET: catch inconsistent / implicit returns.
select = ["E", "F", "I", "B", "UP", "ANN", "RET"]

[tool.ruff.lint.per-file-ignores]
# Tests need not be fully annotated.
"tests/**" = ["ANN"]
# Scripts and one-off tooling are not part of the typed migration surface.
"scripts/**" = ["ANN"]

[tool.black]
line-length = 100

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["chonk"]
exclude = ["**/__pycache__", "demo", "work", "tests"]
# Optional backends (duckdb, numpy, spacy, igraph, …) ship no type stubs; their
# absence is expected and not actionable in this repo's type gate.
reportMissingImports = "warning"
reportMissingModuleSource = "none"
# Per-rule errors promoted while staying in standard mode:
# bare `-> list`/`dict`/`tuple` (opaque to the Go migration) and
# unguarded `.fetchone()[0]` subscripts on Optional results.
reportMissingTypeArgument = "error"
reportOptionalSubscript = "error"
target-version = ["py311"]
